--- a/client/src/components/conditions/conditions.css
+++ b/client/src/components/conditions/conditions.css
@@ -1,40 +1,13 @@
-.accordion-item > *,
-.accordion-header > * {
-  background-color: var(--background-color) !important;
-  text-align: center;
-  border-color: var(--background-color) !important;
-  border-top: none; 
-  border-bottom: none;
+.conditions-accordion {
+    width: 40%
 }
 
-.accordion {
-  width: 40%;
-  text-align: center;
-  border-color: var(--background-color) !important;
-  border-top: none; /* Remove top border */
-  border-bottom: none; /* Remove bottom border */
+.conditions-accordion table {
+    justify-self: center
 }
 
-.accordion-item > *,
-.accordion-header > * {
-  box-shadow: none !important; /* Remove any box-shadow */
-}
-
-.accordion-item,
-.accordion-header {
-  border-top: none;
-  border-bottom: none;
-}
-
-.accordion-body li {
-  text-align: left;
-}
-
-.accordion-button:not(.collapsed) ~ div {
-    background-color: var(--header-color) !important;
-    color: var(--text-color) !important;
-    box-shadow: 0px 0px 5px 5px black !important;
-    z-index: 1000;
-    margin-bottom: 1rem;
-    margin-top: .5rem;
+.conditions-accordion td {
+    padding-left: 4rem;
+    padding-right: 1rem;
+    text-align: center;
 }
