--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,11 @@
   text-decoration: underline;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -120,4 +125,28 @@
 .sm-button {
   max-width: 2rem;
   max-height: 2rem;
+}
+
+/* Small screens */
+@media (min-width: 576px) {
+  .col-sm-4 {
+    width: 33.333333%;
+    flex: 0 0 33.333333%;
+  }
+}
+
+/* Medium screens */
+@media (min-width: 768px) {
+  .col-md-3 {
+    width: 25%;
+    flex: 0 0 25%;
+  }
+}
+
+/* Large screens */
+@media (min-width: 992px) {
+  .col-lg-3 {
+    width: 25%;
+    flex: 0 0 25%;
+  }
 }
