--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,11 @@
   --active-text-color: #cc9e14;
 }
 
+* {
+  box-sizing: border-box;
+  font-family: American Typewriter, serif;
+}
+
 .nav-div:hover {
   cursor: pointer;
   filter: contrast(0.1);
@@ -21,12 +26,32 @@
   filter: contrast(0.1);
 }
 
+.fw-bold {
+  font-weight: bold;
+}
+
+.fst-italic {
+  font-style: italic;
+}
+
 .justify-content-center {
   justify-content: center;
 }
 
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
+.flex-end {
+  justify-content: flex-end;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-start {
+  text-align: start !important
 }
 
 .align-self-center {
@@ -91,6 +116,10 @@
   padding-right: 0.5rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .pb-2 {
   margin-bottom: 0.75rem;
 }
@@ -108,6 +137,10 @@
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mb-1 {
