spacing sorted for spell card

--- a/client/src/components/spells/Spells.css
+++ b/client/src/components/spells/Spells.css
@@ -16,7 +16,5 @@
 .spell-list-div {
     width: 80%;
     text-align: center;
-    /* display: flex; */
-    /* text-align: center; */
-    /* justify-self: center; */
+    justify-self: center;
 }
