--- a/client/src/components/spells/SpellCard.css
+++ b/client/src/components/spells/SpellCard.css
@@ -5,6 +5,12 @@
   box-shadow: 0px 0px 5px 5px black;
 }
 
+.spell-card > .p-card-body,
+.spell-card .p-card-content {
+  padding-top: 0;
+  padding: 0 0.5rem 0.5rem
+}
+
 .spellCardHeader {
   display: flex;
   justify-content: space-between;
