--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,6 +82,11 @@
   text-decoration: underline;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
